# panda-arm-grpo

./: .gitignore  grpo_asynchronous.py  grpo_synchronous.py  main.py  plot_data.ipynb  ppo_continuous.py  pyproject.toml  verify_model.py
panda_mujoco_gym/: __init__.py
panda_mujoco_gym/assets/: panda_mocap_no_weld.xml  reach.xml  reach_new.xml  reach_no_obs.xml
panda_mujoco_gym/envs/: __init__.py  panda_custom_env.py  reach.py
utils/: evals_tool.py
